# Udemy-Master-AI-Agents-Ed-Donner

./: 1_lab1.ipynb  README.md  requirements.txt
allen-takeaway_learning_notes/: day-2-agentic-architecture-lesson.md  day-2-workflow-design-patterns.md  day-3-orchestrating-llm.md  day-4-evaluator_optimizer_workflow.md  day4-agentic-frameworks.md  day4-resources-tools.md  day5-agent_loop_llm_tools.md
allen-takeaway_learning_notes/week-1(basic-knowledge-and-setup)/: day-2-understanding-agent-vs-workflow-pattern.md
allen-takeaway_learning_notes/week-2/: day1-async_io_python_agents.md  day4-deep-research-planner-agent-structured-outputs.md
allen-takeaway_learning_notes/week-2(all-about-openai-agents)/: day-1-vibe-coding-tips.md  day-1openai-agents-sdk-first-look.md  day-2-agents-as-tools-orchestration.md  day2-handoffs-delegating-control-between-agents.md  day3-guardrails-openai-agents-sdk.md  day4-deep-research-full-pipeline-orchestration.md  day4-deep-research-search-agent-hosted-tools.md
allen-takeaway_learning_notes/week-3(crewAI)/: day-1-crewai-core-concepts-agents-tasks-crews.md  day-1-crewai-debate-tasks-crew-main.md  day-1-crewai-litellm-integration-project-setup.md  day-2-crewai-financial-researcher-agents-tasks-context-models.md  day-2-crewai-tools-serperdev-web-search.md  (+9 more)
important/: instruction-to-run-crew-without-uv.md
projects/: 3_lab3.ipynb  5_extra.ipynb
projects/week-3/debater1/: README.md  pyproject.toml
projects/week-3/debater1/src/debater1/config/: agents.yaml
projects/week-3/debater1/src/debater1_old/: crew.py  main.py
(+50 files in other folders)
