[project]
name = "debater1"
version = "0.1.0"
description = "debater1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
debater1 = "debater1.main:run"
run_crew = "debater1.main:run"
train = "debater1.main:train"
replay = "debater1.main:replay"
test = "debater1.main:test"
run_with_trigger = "debater1.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
